--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="header-content">
             <!-- Add your profile picture here -->
             <img src="./pic.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1 style="text-align: center;">Sabari S</h1>
+            <h1 style="text-align: center;">SABARI S</h1>
             <p style="font-size: 19px;">Student</p>
         </div>
     </header>
@@ -118,7 +118,7 @@
             <p>I'm a <b>Student</b>studing in A.m.jain college 
   
             
-             <a href="https://techtrainer20.github.io/git_con2/" traget="_target">A M jain college</a> landscape. I'm intersted to learn new technologies </p>
+             <a href="https://techtrainer20.github.io/git_con2/" traget="_target">A M jain college</a> I'm intersted to learn new technologies </p>
         </div>
     </section>
 
