--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./pic.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="/pic.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1 style="text-align: center;">SABARI S</h1>
             <p style="font-size: 19px;">Student</p>
         </div>
@@ -138,6 +138,7 @@
                 <li>Java programming</li>
                 <li>c++ programming</li>
                 <li>Java script</li>
+                <li>HTML and CSS</li>
             </ul>
         </div>
     </section>
@@ -148,6 +149,7 @@
             <ul>
                 <li><a href="#">learn fundamendals about webdevelopment</a></li>
                 <li><a href="#">reading novels</a></li>
+                <li><a href="#">Playing Games</a></li>
                 <!-- Add more project links here -->
             </ul>
         </div>
@@ -157,7 +159,7 @@
     
         <div class="section-content" style="text-align: center;">
             <h2>Resume</h2>
-            <a href="./mycv.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="/mycv.pdf" target="_blank" class="download-button">Download CV</a>
         </div>
         
     </section>
