--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="/pic.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="pic.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1 style="text-align: center;">SABARI S</h1>
             <p style="font-size: 19px;">Student</p>
         </div>
